--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -23,7 +23,7 @@
         <div class="mb-3">
           <label for="image" class="form-label"> Enter image link </label>
           <input
-            name="listing.image"
+            name="listing[image]"
             placeholder="Enter image URL/link"
             type="text"
             class="form-control"
@@ -33,7 +33,7 @@
           <div class="mb-3 col-md-4">
             <label for="price" class="form-label"> Enter Price </label>
             <input
-              name="listing[Price]"
+              name="listing[price]"
               placeholder="12000"
               type="number"
               class="form-control"
