--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,8 +1,8 @@
 <nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/"
-      ><i class="fa-solid fa-star-half-stroke"></i
-    ></a>
+    <a class="navbar-brand" href="/">
+      <img src="/css/img.png" alt="Waynest Logo" style="height: 40px" />
+    </a>
     <button
       class="navbar-toggler"
       type="button"
