--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -27,7 +27,7 @@
           <label for="Image" class="form-label"> Enter Image </label>
           <input
             name="listing[image]"
-            value="<%= listing.image%>"
+            value="<%= listing.image.url%>"
             type="text"
             class="form-control"
           />
@@ -44,7 +44,7 @@
           </div>
 
           <div class="mb-3 col-md-8">
-            <label for="Country" class="form-label"> Enter Country </label>
+            <label for="country" class="form-label"> Enter Country </label>
             <input
               name="listing[country]"
               value="<%= listing.country %>"
