--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -3,13 +3,8 @@
   <br /><br />
   <div class="row mt-3">
     <div class="col-8 offset-2">
-      <h3>Create a new listing</h3>
-      <form
-        method="POST"
-        action="/listings "
-        novalidate
-        class="needs-validation"
-      >
+      <h3>Add a new listing</h3>
+      <form method="POST" action="/listings " class="needs-validation">
         <div class="mb-3">
           <label for="title" class="form-label"> Enter Title </label>
           <input
@@ -33,7 +28,7 @@
         <div class="mb-3">
           <label for="image" class="form-label"> Enter image link </label>
           <input
-            name="listing[image]"
+            name="listing[image][url]"
             placeholder="Enter image URL/link"
             type="text"
             class="form-control"
